--- a/style.css
+++ b/style.css
@@ -1,1 +1,266 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    outline: none;
+    font-family: 'Poppins', sans-serif;
+}
+
+html {
+    font-size: 62.5%;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    background-color: #000;
+    color: #fff;
+}
+
+header {
+    margin-top: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1rem 9%;
+    background-color: transparent;
+    filter: drop-shadow(0 0 10px #fff);
+    display: flex;
+}
+
+header .logo {
+    font-size: 3.5rem;
+    font-weight: 800;
+    cursor: pointer;
+    color: #fff;
+    transition: all 0.3s ease;
+}
+
+header .logo:hover {
+    color: #007bff;
+}
+
+header nav a{
+    font-size: 1.7rem;
+    color: white;
+    margin-left: 4rem;
+    font-weight: 500;
+    transition: all 0.3s ease;
+    border-bottom: 2px solid transparent;
+}
+
+header nav a:hover,
+header nav a.active {
+    color: #007bff;
+    border-bottom: 2px solid #007bff;
+}
+
+@media (max-width: 995px) {
+    nav {
+        position: absolute;
+        display: none;
+        top: 100%;
+        right: 0;
+        width: 40%;
+        border-left: 3px solid #007bff;
+        border-bottom: 3px solid #007bff;
+        border-bottom-left-radius: 10px;
+        padding: 2rem;
+        background-color: #000;
+        border-top: 3px solid #007bff;
+    }
+
+    nav.active {
+        display: block;
+    }
+
+    nav a{
+        display: block;
+        margin: 2rem 0;
+        font-size: 2rem;
+    }
+
+    nav a:hover,
+    nav a.active {
+        padding: 1rem;
+        border-radius: 0.5rem;
+        border-bottom: 0.5rem solid #007bff;
+    }
+}
+
+section {
+    min-height: 100vh;
+    padding: 5rem 9% 5rem 9%;
+}
+
+.home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem;
+    background-color: #000;
+}
+
+.home.home-content h1 {
+    font-size: 6rem;
+    font-weight: 800;
+    line-height: 1.2em;
+}
+
+span {
+    color: #007bff;
+}
+
+.home.home-content h3 {
+    font-size: 3rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+}
+
+.home.home-content p {
+    font-size: 1.7rem;
+    font-weight: 400;
+    margin-bottom: 2rem;
+}
+
+.home-img {
+    border-radius: 50%;
+}
+
+.home-img img {
+    position: relative;
+    width: 32vw;
+    border-radius: 50%;
+    box-shadow: 0 0 15px #007bff;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.home-img img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 175px #007bff;
+}
+
+.social-icons a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    height: 4rem;
+    font-size: 2rem;
+    color: #007bff;
+    background-color: transparent;
+    border-radius: 50%;
+    margin: 0 0.5rem;
+    transition: all 0.3s ease;
+}
+
+
+.social-icons a:hover {
+    color: #fff;
+    transform: scale(1.2) translate(0, -3px);
+}
+
+.btn {
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #fff;
+    background-color: #007bff;
+    border-radius: 3.5rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.btn:hover {
+    background-color: #ffffff;
+    color: #007bff;
+    box-shadow: 0 0 15px #007bff;
+    transform: scale(1.1);
+}
+
+.typing-text {
+    font-size: 34px;
+    font-weight: 600;
+    min-width: 280px;
+}
+
+.typing-text span {
+    position: relative;
+}
+
+.typing-text span::before {
+    content: "Software Developer";
+    color: #007bff;
+    animation: words 20s infinite;
+}
+
+.typing-text span::after {
+    content: '';
+    background-color: black;
+    position: absolute;
+    width: calc(100% + 8px);
+    height: 100%;
+    border-left: 3px solid black;
+    right: -8;
+    animation: cursor 0.7s infinite;
+}
+
+@keyframes cursor {
+    to{
+        border-left: 3px solid transparent;
+    }
+}
+
+@keyframes words {
+    0% {
+        content: "Software Developer";
+    }
+    20% {
+        content: "Software Engineer";
+    }
+    40% {
+        content: "Web Designer";
+    }
+    60% {
+        content: "Student";
+    }
+    80% {
+        content: "Professional Stackoverflow User";
+    }
+    100% {
+        content: "Programmer";
+    }
+}
+
+@media (max-width: 1000px) {
+    .home {
+        gap: 4rem;
+    }
+}
+
+@media (max-width: 995px) {
+    .home {
+        flex-direction: column;
+        margin: 5rem 4rem;
+    }
+}
+
+.home .home-content h3 {
+    font-size: 2.5rem;
+}
+
+.home .home-content h1 {
+    font-size: 5rem;
+}
+
+.home-img img {
+
+    margin-top: 4rem;
+}
