--- a/style.css
+++ b/style.css
@@ -264,3 +264,101 @@ span {
 
     margin-top: 4rem;
 }
+
+.contact .backgound-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+}
+
+.contact {
+    //background-image: url('images/background.png');
+    background: black;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact .contact-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    height: 100%;
+}
+
+.contact .contact-content h1 {
+    font-size: 4rem;
+    font-weight: 800;
+    color: #fff;
+}
+
+.contact .inputBox {
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.contact .inputBox textarea {
+    min-height: 150px;
+    max-height: 200px;
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    outline: none;
+    background: transparent;
+    color: #fff;
+    transition: all 0.3s ease;
+}
+
+.contact .inputBox input {
+    width: 100%;
+    height: 50px;
+    padding: 12px;
+    font-size: 16px;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    outline: none;
+    background: transparent;
+    color: #fff;
+    transition: all 0.3s ease;
+}
+
+.contact .inputBox label {
+    position: absolute;
+    top: 14px;
+    left: 15px;
+    color: #fff;
+    font-size: 16px;
+    pointer-events: none;
+    background: transparent;
+    padding: 0 5px;
+    transition: all 0.3s ease;
+}
+
+
+.contact .inputBox input:focus,
+.contact .inputBox input:valid {
+    border-color: #007bff;
+
+}
+
+.contact .inputBox input:focus + label,
+.contact .inputBox input:valid + label {
+    top: -8px;
+    left: 12px;
+    font-size: 14px;
+    color: #007bff;
+    background: black;
+}
